--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.host.url=http://localhost:9000
 sonar.login=sqp_f03c2bf4e9bd3319f6efb5139518338a3b318811
 sonar.projectKey=fastapi
 
+sonar.scm.provider=git
 sonar.coverage.dtdVerification=false
 
 sonar.python.version=3.12
